--- a/MYSERVER.yml
+++ b/MYSERVER.yml
@@ -11,13 +11,13 @@
       apt:
         name:
         - docker
+        - docker-compose
         - fail2ban
         - ufw
         - unattended-upgrades
         - logwatch
         - vim
         - ansible
-        - virt-manager
         state: latest
         cache_valid_time: 3600
 
