--- a/MYSERVER.yml
+++ b/MYSERVER.yml
@@ -16,25 +16,24 @@
           - ansible
           - yum-utils
         state: latest
-        cache_valid_time: 3600
 
     - name: Do nothing when laptop lid is closed
       lineinfile: dest=/etc/systemd/logind.conf
               regexp="^#HandleLidSwitch=suspend"
               line="HandleLidSwitch=ignore"
               state=present
-      notify: Restart systemd-logind
+      notify: Restart systemd-logind.service
 
     - name: Disallow password authentication
       lineinfile: dest=/etc/ssh/sshd_config
               regexp="^PasswordAuthentication"
               line="PasswordAuthentication no"
               state=present
-      notify: Restart ssh
+      notify: Restart ssh.service
 
     - name: Disallow root SSH access
       lineinfile: dest=/etc/ssh/sshd_config
               regexp="^PermitRootLogin"
               line="PermitRootLogin no"
               state=present
-      notify: Restart ssh
+      notify: Restart ssh.service
