--- a/MYSERVER.yml
+++ b/MYSERVER.yml
@@ -48,14 +48,14 @@
 
     - name: Disallow password authentication
       lineinfile: dest=/etc/ssh/sshd_config
-              regexp="^PasswordAuthentication"
+              regexp="^#PasswordAuthentication yes"
               line="PasswordAuthentication no"
               state=present
       notify: Restart sshd
 
     - name: Disallow root SSH access
       lineinfile: dest=/etc/ssh/sshd_config
-              regexp="^PermitRootLogin"
+              regexp="^#PermitRootLogin yes"
               line="PermitRootLogin no"
               state=present
       notify: Restart sshd
